Wed Aug 31 14:41:30 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (OPTFLAGS): default global optimization to
	  disabled for all VC++ versions.  fixed: [ruby-dev:26897]

Wed Aug 31 10:36:09 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* process.c (proc_detach, proc_setmaxgroups): missing argument type
	  declaration. (I recomment ANSI-style function)

Wed Aug 31 06:59:01 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_scan): already String#scan behaves differently
	  regarding if block is given.

Tue Aug 30 23:49:34 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c, dir.c, enum.c, hash.c, io.c, range.c, string.c, struct.c:
	  let enumerable methods return Enumerator.  [ruby-dev:26924]

	* intern.h (RETURN_ENUMERATOR): utility macro for enumerable methods.

Tue Aug 30 23:25:45 2005  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/debug.rb: no need to restart at exit.

Tue Aug 30 23:20:19 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_rescue2): initialization miss.  fixed: [ruby-dev:26917]

	* lib/mkmf.rb (xsystem, xpopen): no longer expand by Config.

	* lib/mkmf.rb (link_command, cc_command, cpp_command): expand
	  variables at once, and quote hdrdir.  fixed: [ruby-core:05680]

	* lib/mkmf.rb (libpathflag): quote paths.

Tue Aug 30 19:34:27 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/digest/md5/md5ossl.h, ext/digest/rmd160/rmd160ossl.h,
	  ext/digest/sha1/sha1ossl.h: include <stddef.h> to avoid
	  error in compilation with OpenSSL-0.9.8. [ruby-list:41068]

Tue Aug 30 16:19:40 2005  Keiju Ishitsuka <keiju@ruby-lang.org>

	* lib/irb/init.rb: bug fix. [ruby-dev: 26920]

Tue Aug 30 16:13:00 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (enum_count): new method.  [ruby-dev:26895]

Tue Aug 30 12:45:15 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_send): do not call private methods if the receiver
	  is specified.  [ruby-talk:153672]
