@@ -4437,7 +4437,7 @@ end
 #Tk.freeze
 
 module Tk
-  RELEASE_DATE = '2005-08-10'.freeze
+  RELEASE_DATE = '2005-09-01'.freeze
 
   autoload :AUTO_PATH,        'tk/variable'
   autoload :TCL_PACKAGE_PATH, 'tk/variable'
