@@ -1,3 +1,12 @@
+Thu Sep  1 14:12:45 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/lib/multi-tk.rb: On Tcl8.5, MultiTkIp#invoke_hidden doesn't 
+	  work (gives wrong order of arguments). 
+
+	* ext/tk/lib/multi-tk.rb: add MultiTkIp#invoke_hidden_on_namespace 
+	  to support '-namespace' option of 'interp invokehidden' command 
+	  on Tcl8.5.
+
 Wed Aug 31 14:41:30 2005  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/Makefile.sub (OPTFLAGS): default global optimization to
